cmake_minimum_required(VERSION 3.15)
project(FinalProjct C)

set(CMAKE_C_STANDARD 99)

add_executable(FinalProjct main.c Functions.c Functions.h InputData.c InputData.h ListDisplayFunctions.c ListDisplayFunctions.h TreePath.c TreePath.h SaveToFile.c SaveToFile.h FindFullPathList.c FindFullPathList.h)